switch to slimmer alpine image

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,6 @@ inputs:
     required: false
 runs:
   using: docker
-  image: docker://quay.io/symetri/sops:v3.5.0
+  image: docker://quay.io/symetri/sops:v3.5.0-alpine
   env:
     PRIVATE_KEY: ${{ inputs.gpgPrivateKey }}
